# Linguisage-Dictionary

./: .env_backup  .gitignore  Dockerfile  app_entry_point.sh  app_entry_point_without_ssl.sh  collect_words_from_dictionary_list.py  config.py  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  sandbox.py  script_runner.py  scripts.py
.github/workflows/: deploy.yml
Dictionary/utils/: __init__.py
Image/: link_collector.py
Parsers/: __init__.py  collect_words_from_dictionary_list.py  dictionary_searcher.py  main_collector.py  word_collector.py
Parsers/Dictionary/: __init__.py  main.py  page_fetcher.py  parse_dictionary_page.py  parse_page.py  schemas.py  test.py
Parsers/Dictionary/senses/: __init__.py  multiple.py  sense_parser.py  single.py
Parsers/Downloader/: __init__.py  downloader.py
Parsers/Downloader/fetcher/: __init__.py  fetcher.py
Parsers/Downloader/writer/: writer.py
Parsers/Image/: __init__.py  cloudparser_collector.py  image_parser.py  interface.py  link_collector.py  seleniumbase_collector.py
Parsers/Image/schemas/: __init__.py  server_response.py
Parsers/Image/sel_botasaurus/: botsaurus_collector.py
Parsers/scripts/: collect_words_from_dictionary_list.py
Parsers/scripts/100_000_word/: get_100_000_word.py
admin/: __init__.py  admin_tables.py  auth.py
alembic/: env.py
alembic/versions/: 2023_11_30_1738-73403aef9650_initial_revision.py  2023_11_30_1759-a132a194116a_add_tables_word_sense_image_example_row_.py  2023_12_01_1404-b70d5aaf260b_add_alias_table.py  2024_01_19_1351-1726898d9ec3_initial_commit.py  2024_02_15_1547-37ecbdb4833a_initial_commit.py
api_v1/: __init__.py
api_v1/common/: crud.py  views.py
api_v1/personalize/: crud.py  depends.py  schemas.py  views.py
api_v1/public/: __init__.py  crud.py  schemas.py  views.py
api_v1/public_word/: crud.py  views.py
api_v1/word/: __init__.py  crud.py  schemas.py  views.py
background_tasks/: celery.py  tasks.py
cert/: readme.txt
core/: __init__.py  config.py  make_static_folder.py  schemas.py  types.py
core/database/: __init__.py  base.py  create_or_supplement_word.py  db_helper.py
core/schemas/: __init__.py  schemas.py
scripts/: __init__.py  collections_auto_downloader.py  custom_list.py  find_and_save_collection_to_db.py  oxford5000.py
scripts/_100_000_word/: get_100_000_word.py
scripts/collections/: custom_list.py  oxford5000.py
utils/: __init__.py  image_processing.py  join_url.py  split_on_batches.py  timers.py
utils/special/: __init__.py  cut_word_list.py
(+14 files in other folders)
