[tool.poetry]
name = "parsers"
version = "0.1.0"
description = ""
authors = ["iRespectOnlyYen <MyNameIIIypuk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
cloudscraper = "^1.2.71"
lxml = "^4.9.3"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
pip = "^23.3.1"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
