[tool.poetry]
name = "parsers"
version = "0.1.0"
description = ""
authors = ["iRespectOnlyYen <MyNameIIIypuk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
pip = "^23.3.1"
alembic = "^1.12.1"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"
cloudscraper = "^1.2.71"
fake-useragent = "^1.4.0"
python-multipart = "^0.0.6"
botasaurus = "^3.2.3"
pillow = "^10.2.0"
sqladmin = {extras = ["itsdangerous"], version = "^0.16.0"}
itsdangerous = "^2.1.2"
bcrypt = "^4.1.2"
celery = "^5.3.6"
redis = "^5.0.1"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
