[tool.poetry]
name = "parsers"
version = "0.1.0"
description = ""
authors = ["iRespectOnlyYen <MyNameIIIypuk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
seleniumbase= "4.34.15"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"

alembic = "^1.12.1"
uvicorn = "^0.24.0.post1"

pillow = "^10.2.0"
sqladmin = {extras = ["full"], version = "^0.16.0"}
itsdangerous = "^2.1.2"
bcrypt = "^4.1.2"
celery = "^5.3.6"
redis = "^5.0.1"
flower = "^2.0.1"
botasaurus = "^4.0.76"
botasaurus-requests = "^4.0.38"
loguru = "^0.7.3"
fake-useragent = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest-asyncio = "^0.23.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
